[tool.poetry]
name = "android-chrome-transfer"
version = "0.1.0"
description = "Backup and transfer chrome tabs from an android device"
authors = ["Nick Molo <nick.molo@spire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
pure-python-adb = "^0.3.0.dev0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # Pylint
  "PL",
  "RUF"
]
